# drive-session-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/drive_session_mcp/: cli.py  drive.py  server.py
src/google_session_mcp/: browser.py  calendar.py  cli.py  gmail.py
tests/: test_drive_helpers.py
